# bw1000_benchmark

./: .gitignore  README.md  benchmark_presets.sh  build_hipfftmp.sh  fft2d_distributed.py  hipfftmp_benchmark.cpp  hipfftmp_scaling.sh  poisson3d_distributed.py  poisson_scaling.sh  pyproject.toml  scaling.sh  spike_adaptive_method.md  submit_mn5.sh
.github/workflows/: numerical-ci.yml
examples/: poisson3d_external.py
spectral_fd/: __init__.py  _compat.py  _engine.py  benchmark.py  cli.py  compare.py  config.py  driver.py  factory.py  layouts.py  operators.py  pipeline.py  poisson3d.py  presets.py  regression.py  reporting.py  runtime.py  solver.py  spike.py  spike_adaptive.py  spike_local.py  transforms.py  tridiagonal.py  validation.py
tests/: __init__.py  test_ci_workflow.py  test_cli_runtime.py  test_compare.py  test_compatible_facade.py  test_factory_validation.py  test_layouts_presets.py  test_pipeline_benchmark.py  test_public_api.py  test_reporting_regression.py  test_spike_local_adaptive.py  test_transforms_operators.py  test_tridiagonal_spike.py
