[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-fd"
version = "0.1.0"
description = "Distributed horizontal-spectral / vertical-finite-difference solvers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
py-modules = ["poisson3d_distributed"]

[tool.setuptools.packages.find]
include = ["spectral_fd*"]
