[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-fd"
version = "0.2.0"
description = "Distributed horizontal-spectral / vertical-finite-difference solvers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.scripts]
spectral-fd-poisson = "spectral_fd.cli:main"
spectral-fd-regression = "spectral_fd.regression:main"
spectral-fd-compare = "spectral_fd.compare:main"

[tool.setuptools]
py-modules = ["poisson3d_distributed"]

[tool.setuptools.packages.find]
include = ["spectral_fd*"]
